Added Documentation and code clean-up.
To Do:
Final code refactoring
Fix Borough-View table style;
Write JUnit Tests;
Finish report.